Fixed excessively long words messing up widths
Comment content width overflows x

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
 	/* * {
-		border-radius: 0px !important;
+		outline: 1px red solid;
 	} */
 
 	/* inter-latin-wght-normal */
@@ -90,6 +90,16 @@
 		border: 4px #97dc42 solid;
 		transition-timing-function: ease-out;
 		transition-duration: 0.15s;
+	}
+
+	/* Hyphenation/break word for long words in comments */
+	.hyphenate {
+		word-wrap: break-word;
+		overflow-wrap: anywhere;
+
+		-webkit-hyphens: auto;
+		-moz-hyphens: auto;
+		hyphens: auto;
 	}
 }
 
